# Microservice_app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/service_authorization/: auth_app.py  func_service.py  schemas.py
src/service_authorization/database/: alembic.ini  db.py  model.py  requests_model.py
src/service_authorization/database/migrations/: env.py
src/service_authorization/settings/: Dockerfile  __init__.py  config.py
src_project/: pyproject.toml
